--- a/main.tex
+++ b/main.tex
@@ -614,7 +614,12 @@ The chosen ontologies do not include relational loops and single parentage.
 
 \subsubsection{Structure}
 Table \ref{tab:ontology-structure-metrics} provides an overview of the
-structural metrics of the three ontologies. 
+structural metrics of the three ontologies.
+\begin{itemize}
+\item In terms of size, the Astronomy Ontology has a significantly larger
+  number of concepts. In contrast, the smallest ontology: Wines, has the
+  largest number of individuals 
+\end{itemize}
 
 \begin{table}[H]
   \centering
