--- a/main.tex
+++ b/main.tex
@@ -618,7 +618,7 @@ structural metrics of the three ontologies.
 \begin{itemize}
 \item In terms of size, the Astronomy Ontology has a significantly larger
   number of concepts. In contrast, the smallest ontology: Wines, has the
-  largest number of individuals 
+  largest number of individuals.
 \end{itemize}
 
 \begin{table}[H]
