--- a/main.tex
+++ b/main.tex
@@ -618,7 +618,11 @@ structural metrics of the three ontologies.
 \begin{itemize}
 \item In terms of size, the Astronomy Ontology has a significantly larger
   number of concepts. In contrast, the smallest ontology: Wines, has the
-  largest number of individuals.
+  largest number of individuals. The three ontologies represent a very small,
+  a medium and a relatively large ontology to test for ontology
+  population. However, in compared to larger ontologies like DBPedia
+  \cite{auer2007DbpediaNucleusWeb}, all three are relatively small and
+  structurally simple.
 \end{itemize}
 
 \begin{table}[H]
