--- a/main.tex
+++ b/main.tex
@@ -614,15 +614,13 @@ The chosen ontologies do not include relational loops and single parentage.
 
 \subsubsection{Structure}
 Table \ref{tab:ontology-structure-metrics} provides an overview of the
-structural metrics of the three ontologies.
-\begin{itemize}
-\item In terms of size, the Astronomy Ontology has a significantly larger
-  number of concepts. In contrast, the smallest ontology: Wines, has the
-  largest number of individuals. The three ontologies represent a very small,
-  a medium and a relatively large ontology to test for ontology
-  population. However, in compared to larger ontologies like DBPedia
-  \cite{auer2007DbpediaNucleusWeb}, all three are relatively small and
-  structurally simple.
+structural metrics of the three ontologies.  In terms of size, the Astronomy
+Ontology has a significantly larger number of concepts. In contrast, the
+smallest ontology: Wines, has the largest number of individuals. The three
+ontologies represent a very small, a medium and a relatively large ontology to
+test for ontology population. However, in compared to larger ontologies like
+DBPedia \cite{auer2007DbpediaNucleusWeb}, all three are relatively small and
+structurally simple.
 \end{itemize}
 
 \begin{table}[H]
