--- a/main.tex
+++ b/main.tex
@@ -620,7 +620,9 @@ smallest ontology: Wines, has the largest number of individuals. The three
 ontologies represent a very small, a medium and a relatively large ontology to
 test for ontology population. However, in compared to larger ontologies like
 DBPedia \cite{auer2007DbpediaNucleusWeb}, all three are relatively small and
-structurally simple.
+structurally simple. The Astronomy Ontology has the largest breadth
+\cite{gangemi2005OntologyEvaluationValidation} which is an indicator of the
+diverseness of its domain. The CASE Ontology is characterized by larger
 \end{itemize}
 
 \begin{table}[H]
