--- a/main.tex
+++ b/main.tex
@@ -623,6 +623,9 @@ DBPedia \cite{auer2007DbpediaNucleusWeb}, all three are relatively small and
 structurally simple. The Astronomy Ontology has the largest breadth
 \cite{gangemi2005OntologyEvaluationValidation} which is an indicator of the
 diverseness of its domain. The CASE Ontology is characterized by larger
+maximum dispersion \cite{gangemi2005OntologyEvaluationValidation},
+highlighting the existence of a large variety of sibling concepts of similar
+granularity of the domain.
 \end{itemize}
 
 \begin{table}[H]
