--- a/main.tex
+++ b/main.tex
@@ -616,17 +616,18 @@ The chosen ontologies do not include relational loops and single parentage.
 Table \ref{tab:ontology-structure-metrics} provides an overview of the
 structural metrics of the three ontologies.  In terms of size, the Astronomy
 Ontology has a significantly larger number of concepts. In contrast, the
-smallest ontology: Wines, has the largest number of individuals.  The Astronomy Ontology has the largest breadth
+smallest ontology: Wines, has the largest number of individuals.  The
+Astronomy Ontology has the largest breadth
 \cite{gangemi2005OntologyEvaluationValidation} which is an indicator of the
 diverseness of its domain. The CASE Ontology is characterized by larger
 maximum dispersion \cite{gangemi2005OntologyEvaluationValidation},
 highlighting the existence of a large variety of sibling concepts of similar
 granularity of the domain.
-The three
-ontologies represent a very small, a medium and a relatively large ontology to
-test for ontology population. However, in compared to larger ontologies like
-DBPedia \cite{auer2007DbpediaNucleusWeb}, all three are relatively small and
-structurally simple.
+
+The three ontologies represent a very small, a medium and a relatively large
+ontology to test for ontology population. However, in compared to larger
+ontologies like DBPedia \cite{auer2007DbpediaNucleusWeb}, all three are
+relatively small and structurally simple.
 
 \begin{table}[H]
   \centering
