--- a/main.tex
+++ b/main.tex
@@ -622,7 +622,13 @@ Astronomy Ontology has the largest breadth
 diverseness of its domain. The CASE Ontology is characterized by larger
 maximum dispersion \cite{gangemi2005OntologyEvaluationValidation},
 highlighting the existence of a large variety of sibling concepts of similar
-granularity of the domain.
+granularity of the domain. The structural differences between the three
+ontologies can help identify the macroscopic structural design implications on
+ontology population. We investigate if deeper or broader ontologies represent
+more complex situations for LLMs to perform ontology population. Greater depth
+signifies higher information granularity that can pose challenges of semantic
+separation between deeper entities and their parents. Broader ontologies
+exhibit greater information diversity 
 
 The three ontologies represent a very small, a medium and a relatively large
 ontology to test for ontology population. However, in compared to larger
