--- a/main.tex
+++ b/main.tex
@@ -628,7 +628,8 @@ ontology population. We investigate if deeper or broader ontologies represent
 more complex situations for LLMs to perform ontology population. Greater depth
 signifies higher information granularity that can pose challenges of semantic
 separation between deeper entities and their parents. Broader ontologies
-exhibit greater information diversity 
+exhibit greater information diversity that can confuse LLMs about the relevant
+domain of entities.
 
 The three ontologies represent a very small, a medium and a relatively large
 ontology to test for ontology population. However, in compared to larger
