--- a/main.tex
+++ b/main.tex
@@ -629,7 +629,8 @@ more complex situations for LLMs to perform ontology population. Greater depth
 signifies higher information granularity that can pose challenges of semantic
 separation between deeper entities and their parents. Broader ontologies
 exhibit greater information diversity that can confuse LLMs about the relevant
-domain of entities.
+domain of entities. Dispersion evaluates semantic separability as well for
+closely related sibling entities.
 
 The three ontologies represent a very small, a medium and a relatively large
 ontology to test for ontology population. However, in compared to larger
