--- a/main.tex
+++ b/main.tex
@@ -632,10 +632,10 @@ exhibit greater information diversity that can confuse LLMs about the relevant
 domain of entities. Dispersion evaluates semantic separability as well for
 closely related sibling entities.
 
-The three ontologies represent a very small, a medium and a relatively large
-ontology to test for ontology population. However, in compared to larger
-ontologies like DBPedia \cite{auer2007DbpediaNucleusWeb}, all three are
-relatively small and structurally simple.
+% The three ontologies represent a very small, a medium and a relatively large
+% ontology to test for ontology population. However, in compared to larger
+% ontologies like DBPedia \cite{auer2007DbpediaNucleusWeb}, all three are
+% relatively small and structurally simple.
 
 \begin{table}[H]
   \centering
