--- a/main.tex
+++ b/main.tex
@@ -632,6 +632,8 @@ exhibit greater information diversity that can confuse LLMs about the relevant
 domain of entities. Dispersion evaluates semantic separability as well for
 closely related sibling entities.
 
+\subsubsection{Entity Labels}
+
 % The three ontologies represent a very small, a medium and a relatively large
 % ontology to test for ontology population. However, in compared to larger
 % ontologies like DBPedia \cite{auer2007DbpediaNucleusWeb}, all three are
