--- a/main.tex
+++ b/main.tex
@@ -624,13 +624,14 @@ maximum dispersion \cite{gangemi2005OntologyEvaluationValidation},
 highlighting the existence of a large variety of sibling concepts of similar
 granularity of the domain. The structural differences between the three
 ontologies can help identify the macroscopic structural design implications on
-ontology population. We investigate if deeper or broader ontologies represent
-more complex situations for LLMs to perform ontology population. Greater depth
-signifies higher information granularity that can pose challenges of semantic
-separation between deeper entities and their parents. Broader ontologies
-exhibit greater information diversity that can confuse LLMs about the relevant
-domain of entities. Dispersion evaluates semantic separability as well for
-closely related sibling entities.
+ontology population. We investigate correlations between ontology population
+performance and structure. In particular, we investigate if deeper or broader
+ontologies represent more complex situations for LLMs to perform ontology
+population. Greater depth signifies higher information granularity that can
+pose challenges of semantic separation between deeper entities and their
+parents. Broader ontologies exhibit greater information diversity that can
+confuse LLMs about the relevant domain of entities. Dispersion evaluates
+semantic separability as well for closely related sibling entities.
 
 
 % The three ontologies represent a very small, a medium and a relatively large
