--- a/main.tex
+++ b/main.tex
@@ -647,8 +647,8 @@ represent more complex situations for LLMs to perform ontology population.
     \hline
     \textbf{Metric}                                                                & \textbf{Wines} & \textbf{CASE} & \textbf{Astronomy} \\
     \hline
-    \textbf{Classes (No.)}                                                    & 76                      & 434                    & 1663                        \\
-    \textbf{Individuals (No.)}                                                & 161                     & 131                    & 68                          \\
+    \textbf{Classes (no.)}                                                    & 76                      & 434                    & 1663                        \\
+    \textbf{Individuals (no.)}                                                & 161                     & 131                    & 68                          \\
     \textbf{Depth} \cite{gangemi2005OntologyEvaluationValidation}             & 4                       & 8                      & 10                          \\
     \textbf{Breadth} \cite{gangemi2005OntologyEvaluationValidation}           & 62                      & 228                    & 989                         \\
     \textbf{Dispersion (max.)} \cite{gangemi2005OntologyEvaluationValidation} & 3                       & 118                    & 44                          \\
