--- a/main.tex
+++ b/main.tex
@@ -658,6 +658,9 @@ represent more complex situations for LLMs to perform ontology population.
 
 \subsubsection{Entity Labels}
 
+The domain differences between the three ontologies introduce entity labelling
+differences. The parity between ontological 
+
 The choice of the three ontologies is additionally driven by the differences
 in corresponding semantics of labels of their individuals and concepts. As
 discussed in Section \ref{subsec:framework-data-variability}, semantic
