--- a/main.tex
+++ b/main.tex
@@ -659,7 +659,8 @@ represent more complex situations for LLMs to perform ontology population.
 \subsubsection{Entity Labels}
 
 The domain differences between the three ontologies introduce entity labelling
-differences. The parity between ontological 
+differences. We investigate the parity between ontological label semantics and
+LLM lexical understanding
 
 The choice of the three ontologies is additionally driven by the differences
 in corresponding semantics of labels of their individuals and concepts. As
