--- a/main.tex
+++ b/main.tex
@@ -660,7 +660,8 @@ represent more complex situations for LLMs to perform ontology population.
 
 The domain differences between the three ontologies introduce entity labelling
 differences. We investigate the parity between ontological label semantics and
-LLM lexical understanding
+LLM lexical understanding using similarity measurement between LLM embeddings
+of individuals and concepts.
 
 The choice of the three ontologies is additionally driven by the differences
 in corresponding semantics of labels of their individuals and concepts. As
