--- a/main.tex
+++ b/main.tex
@@ -661,7 +661,16 @@ represent more complex situations for LLMs to perform ontology population.
 The domain differences between the three ontologies introduce entity labelling
 differences. We investigate the parity between ontological label semantics and
 LLM lexical understanding using similarity measurement between LLM embeddings
-of individuals and concepts.
+of individuals and concepts. LLM embeddings provide a rough indicator of the
+semantic `understanding' LLMs develop of words. We employ these embeddings to
+assess if LLMs can identify related individuals and concepts. We generate
+3072-dimensional embeddings of each individual and concept label for all three
+ontologies using OpenAI's \verb|text-embedding-3-large|
+\cite{openai2024EmbeddingModels} model.  Despite the embeddings being
+primarily representative of the OpenAI models, the observed performance trends
+are similar across all tested models (Section \ref{sec:results}), which lead
+us to believe that the results can be generalized beyond the GPT family.
+
 
 The choice of the three ontologies is additionally driven by the differences
 in corresponding semantics of labels of their individuals and concepts. As
