--- a/main.tex
+++ b/main.tex
@@ -667,9 +667,8 @@ assess if base LLM embeddings: 1) associate related concepts of different
 ontologies together and, 2) if their representations can associate individuals
 of an ontology closely with its concepts.
 
-We generate
-3072-dimensional embeddings of each individual and concept label for all three
-ontologies using OpenAI's \verb|text-embedding-3-large|
+We generate 3072-dimensional embeddings of each individual and concept label
+for all three ontologies using OpenAI's \verb|text-embedding-3-large|
 \cite{openai2024EmbeddingModels} model.  Despite the embeddings being
 primarily representative of the OpenAI models, the observed performance trends
 are similar across all tested models (Section \ref{sec:results}), which lead
