--- a/main.tex
+++ b/main.tex
@@ -661,11 +661,11 @@ represent more complex situations for LLMs to perform ontology population.
 The domain differences between the three ontologies introduce entity labelling
 differences. We investigate the parity between ontological label semantics and
 LLM lexical understanding using similarity measurement between LLM embeddings
-of individuals and concepts. LLM embeddings provide a rough indicator of the
-semantic `understanding' LLMs develop of words. We employ these embeddings to
-assess if base LLM embeddings: 1) associate related concepts of different
-ontologies together and, 2) if their representations can associate individuals
-of an ontology closely with its concepts.
+of individuals and concepts. LLM embeddings are indicators of the semantic
+`understanding' LLMs develop of words. We employ these embeddings to assess if
+base LLM embeddings: 1) associate related concepts of different ontologies
+together and, 2) if their representations can associate individuals of an
+ontology closely with its concepts.
 
 We generate 3072-dimensional embeddings of each individual and concept label
 for all three ontologies using OpenAI's \verb|text-embedding-3-large|
