--- a/main.tex
+++ b/main.tex
@@ -674,6 +674,11 @@ primarily representative of the OpenAI models, the observed performance trends
 are similar across all tested models (Section \ref{sec:results}), which lead
 us to believe that the results can be generalized beyond the GPT family.
 
+We supplement the analysis of entity labels by investigating the lexical
+matching between concept and individuals. This supplementary analysis aims to
+assess whether LLMs resort to simpler string-based 
+
+
 
 The choice of the three ontologies is additionally driven by the differences
 in corresponding semantics of labels of their individuals and concepts. As
