--- a/main.tex
+++ b/main.tex
@@ -657,7 +657,7 @@ represent more complex situations for LLMs to perform ontology population.
 \end{table}
 
 \subsubsection{Entity Labels}
-
+% Embedding Similarity
 The domain differences between the three ontologies introduce entity labelling
 differences. We investigate the parity between ontological label semantics and
 LLM lexical understanding using similarity measurement between LLM embeddings
