--- a/main.tex
+++ b/main.tex
@@ -612,7 +612,7 @@ The chosen ontologies do not include relational loops and single parentage.
 % \ref{tab:ontology-metrics} outlines relevant structural metrics of the
 % ontologies to highlight their differences.
 
-\subsubsection{Structure}
+\subsubsection{Structure:}
 Table \ref{tab:ontology-structure-metrics} provides an overview of the
 structural metrics of the three ontologies.  In terms of size, the Astronomy
 Ontology has a significantly larger number of concepts. In contrast, the
@@ -656,7 +656,7 @@ represent more complex situations for LLMs to perform ontology population.
   \end{tabular}
 \end{table}
 
-\subsubsection{Entity Labels}
+\subsubsection{Entity Labels:}
 % Embedding Similarity
 The domain differences between the three ontologies introduce entity labelling
 differences. We investigate the parity between ontological label semantics and
