--- a/main.tex
+++ b/main.tex
@@ -672,7 +672,9 @@ for all three ontologies using OpenAI's \verb|text-embedding-3-large|
 \cite{openai2024EmbeddingModels} model. Despite the embeddings being
 primarily representative of the OpenAI models, the observed performance trends
 are similar across all tested models (Section \ref{sec:results}), which lead
-us to believe that the results can be generalized beyond the GPT family.
+us to believe that the results can be generalized beyond the GPT
+family. Utilizing these embeddings we analyze cluster separation performance of the
+two types of entities, 
 
 We supplement the analysis of entity labels by investigating the lexical
 matching between concept and individuals. This supplementary analysis aims to
