--- a/main.tex
+++ b/main.tex
@@ -669,12 +669,12 @@ ontology closely with its concepts.
 
 We generate 3072-dimensional embeddings of each individual and concept label
 for all three ontologies using OpenAI's \verb|text-embedding-3-large|
-\cite{openai2024EmbeddingModels} model. Despite the embeddings being
-primarily representative of the OpenAI models, the observed performance trends
-are similar across all tested models (Section \ref{sec:results}), which lead
-us to believe that the results can be generalized beyond the GPT
-family. Utilizing these embeddings we analyze cluster separation performance of the
-two types of entities, 
+\cite{openai2024EmbeddingModels} model. Despite the embeddings being primarily
+representative of the OpenAI models, the observed performance trends are
+similar across all tested models (Section \ref{sec:results}), which lead us to
+believe that the results can be generalized beyond the GPT family. Utilizing
+these embeddings we analyze cluster separation performance of the two types of
+entities
 
 We supplement the analysis of entity labels by investigating the lexical
 matching between concept and individuals. This supplementary analysis aims to
