--- a/main.tex
+++ b/main.tex
@@ -605,7 +605,8 @@ complexity and, (by virtue of their differing domains) distinct entity labels.
   Astronomy Ontology concerns a well-known topic that one might expect LLMs to
   have `seen' abundantly in its pre-training corpus.
 \end{itemize}
-The chosen ontologies do not include relational loops and single parentage.
+The chosen ontologies do not include relational loops and are of single
+parentage.
 % We wish to expand the considered set of ontologies to include larger
 % ontologies like DBPedia \cite{auer2007DbpediaNucleusWeb} with more complicated
 % relationships and hierarchies in future works.  Table
