--- a/main.tex
+++ b/main.tex
@@ -631,8 +631,9 @@ their parents. Broader ontologies exhibit greater information diversity that
 can confuse LLMs about the relevant domain of entities. Dispersion evaluates
 semantic separability as well for closely related sibling entities. We
 investigate correlations between ontology population performance and
-structure. In particular, we investigate if deeper or broader ontologies
-represent more complex situations for LLMs to perform ontology population.
+structure. In particular, we investigate if deeper, broader or dispersed
+ontologies (and concepts) represent more complex situations for LLMs to
+perform ontology population.
 
 % The three ontologies represent a very small, a medium and a relatively large
 % ontology to test for ontology population. However, in compared to larger
