--- a/main.tex
+++ b/main.tex
@@ -670,17 +670,15 @@ for all three ontologies using OpenAI's \verb|text-embedding-3-large|
 \cite{openai2024EmbeddingModels} model. Despite the embeddings being primarily
 representative of the OpenAI models, the observed performance trends are
 similar across all tested models (Section \ref{sec:results}), which lead us to
-believe that the results can be generalized beyond the GPT family. Utilizing
-these embeddings we analyze cluster separation performance of the two types of
-entities.
-Through cluster separation analysis of the embeddings, we analyze if the LLM representations: 1) associate related concepts of different ontologies
+believe that the results can be generalized beyond the GPT family. Through
+cluster separation analysis of the embeddings, we analyze if the LLM
+representations: 1) associate related concepts of different ontologies
 together and, 2) if their representations can associate individuals of an
-ontology closely with its concepts.
-LLM embeddings are indicators of the semantic
-`understanding' LLMs develop of words. 
-We supplement the analysis of entity labels by investigating the lexical
-matching between concept and individuals. This supplementary analysis aims to
-assess whether LLMs resort to simpler string-based 
+ontology closely with its concepts.  LLM embeddings are indicators of the
+semantic `understanding' LLMs develop of words.  We supplement the analysis of
+entity labels by investigating the lexical matching between concept and
+individuals. This supplementary analysis aims to assess whether LLMs resort to
+simpler string-based
 
 \begin{figure}[H]
   \centering
