--- a/main.tex
+++ b/main.tex
@@ -674,8 +674,7 @@ believe that the results can be generalized beyond the GPT family. Through
 cluster separation analysis of the embeddings, we analyze if the LLM
 representations: 1) associate related concepts of different ontologies
 together and, 2) if their representations can associate individuals of an
-ontology closely with its concepts.  LLM embeddings are indicators of the
-semantic `understanding' LLMs develop of words.  We supplement the analysis of
+ontology closely with its concepts. We supplement the analysis of
 entity labels by investigating the lexical matching between concept and
 individuals. This supplementary analysis aims to assess whether LLMs resort to
 simpler string-based
