--- a/main.tex
+++ b/main.tex
@@ -672,8 +672,7 @@ representative of the OpenAI models, the observed performance trends are
 similar across all tested models (Section \ref{sec:results}), which lead us to
 believe that the results can be generalized beyond the GPT family. Through
 cluster separation analysis of the embeddings, we analyze if the LLM
-representations: 2) if their representations can associate individuals of an
-ontology closely with its concepts. 1) are capable of capturing label domain
+representations: 1) are capable of capturing label domain
 similarity by having higher similarity between entities from the same ontology
 and, 2) if their representations view concepts and individuals as
 significantly distinct
