--- a/main.tex
+++ b/main.tex
@@ -675,7 +675,7 @@ cluster separation analysis of the embeddings, we analyze if the LLM
 representations: 1) are capable of capturing intra-domain label
 similarity by having higher similarity between entities from the same ontology
 and, 2) if their representations view concepts and individuals as
-significantly distinct
+significantly distinct.
 
 We supplement the analysis of
 entity labels by investigating the lexical matching between concept and
