--- a/main.tex
+++ b/main.tex
@@ -672,9 +672,9 @@ representative of the OpenAI models, the observed performance trends are
 similar across all tested models (Section \ref{sec:results}), which lead us to
 believe that the results can be generalized beyond the GPT family. Through
 cluster separation analysis of the embeddings, we analyze if the LLM
-representations: 1) are capable of capturing intra-domain label
+representations:are capable of capturing intra-domain label
 similarity by having higher similarity between entities from the same ontology
-and, 2) if their representations view concepts and individuals as
+and, if their representations view concepts and individuals as
 significantly distinct.
 
 We supplement the analysis of
