--- a/main.tex
+++ b/main.tex
@@ -672,10 +672,10 @@ representative of the OpenAI models, the observed performance trends are
 similar across all tested models (Section \ref{sec:results}), which lead us to
 believe that the results can be generalized beyond the GPT family. Through
 cluster separation analysis of the embeddings, we analyze if the LLM
-representations are capable of capturing intra-domain label
-similarity by having higher similarity between entities from the same ontology
-and, if their representations view concepts and individuals as
-significantly distinct.
+representations exhibit higher separation between entity and concept
+labels. In particular, we investigate if LLM representations have high
+separation between concept and individual labels  which can result in poor
+ontology population performance.
 
 We supplement the analysis of
 entity labels by investigating the lexical matching between concept and
