--- a/main.tex
+++ b/main.tex
@@ -664,7 +664,7 @@ The domain differences between the three ontologies introduce entity labelling
 differences. We investigate the parity between ontological label semantics and
 LLM lexical understanding using similarity measurement between LLM embeddings
 of individuals and concepts. As instance realizations of concepts, individuals
-should be semantically closely related with their asserted concepts
+should be semantically closely related with their asserted concepts.
 
 We generate 3072-dimensional embeddings of each individual and concept label
 for all three ontologies using OpenAI's \verb|text-embedding-3-large|
