--- a/main.tex
+++ b/main.tex
@@ -678,10 +678,9 @@ labels. In particular, we investigate if LLM representations have high
 separation between concept and individual labels which can result in poor
 ontology population performance.
 
-We supplement the analysis of
-entity labels by investigating the lexical matching between concept and
-individuals. This supplementary analysis aims to assess whether LLMs resort to
-simpler string-based
+We supplement the analysis of entity labels by investigating the lexical
+matching between concept and individuals. This supplementary analysis aims to
+assess whether LLMs resort to simpler string-based
 
 \begin{figure}[H]
   \centering
