--- a/main.tex
+++ b/main.tex
@@ -680,7 +680,7 @@ ontology population performance.
 
 We supplement the analysis of entity labels by investigating the lexical
 matching between concept and individuals. This supplementary analysis aims to
-assess whether LLMs resort to simpler string similarity-based ontology
+assess whether LLMs can resort to simpler string similarity-based ontology
 population. 
 
 \begin{figure}[H]
