--- a/main.tex
+++ b/main.tex
@@ -679,7 +679,7 @@ separation between concept and individual labels which can result in poor
 ontology population performance.
 
 We supplement the analysis of entity labels by investigating the lexical
-matching between concept and individuals. This supplementary analysis aims to
+matching between concepts and individuals. This supplementary analysis aims to
 assess whether LLMs can resort to simpler string similarity-based ontology
 population. 
 
