--- a/main.tex
+++ b/main.tex
@@ -681,7 +681,10 @@ ontology population performance.
 We supplement the analysis of entity labels by investigating the lexical
 matching between concepts and individuals. This supplementary analysis aims to
 assess whether LLMs can resort to simpler string similarity-based ontology
-population. 
+population. The naming conventions of entities in ontologies can lead to
+similar but distinct concepts possessing lexically similar labels. This can
+cause confusion for LLMs if they resort to string matching for ontology
+population.
 
 \begin{figure}[H]
   \centering
