--- a/main.tex
+++ b/main.tex
@@ -685,10 +685,10 @@ population. The naming conventions of entities in ontologies can lead to
 similar but distinct concepts possessing lexically similar labels. This can
 cause confusion for LLMs if they resort to string matching for ontology
 population. We evaluate the string edit-based distance between individual
-labels and 1) the directly-asserted concept of the individual and, 2) all
-other ancestor concepts of the individual (averaged). The combination of the
-two highlights the ability of an LLM to identify a concept assertion from the
-directly-asserted concept and individual labels versus its ability to
+labels and two groups: 1) the directly-asserted concept of the individual and,
+2) all other ancestor concepts of the individual (averaged). The combination
+of the two highlights the ability of an LLM to identify a concept assertion
+from the directly-asserted concept and individual labels versus its ability to
 additionally predict other ancestors using the same ability. Based on our
 formulation of the modelling objective (Section
 \ref{subsec:experiment-llm-factors}), the second distance provides an
