--- a/main.tex
+++ b/main.tex
@@ -692,7 +692,7 @@ directly-asserted concept and individual labels versus its ability to
 additionally predict other ancestors using lexical matching. Based on our
 formulation of the modelling objective (Section
 \ref{subsec:experiment-llm-factors}), the second distance provides an
-indicator of the semantics-based ontology population that are required to LLMs
+indicator of the semantics-based ontology population that LLMs are required to
 employ in order to be robust.
 
 \begin{figure}[H]
