--- a/main.tex
+++ b/main.tex
@@ -698,6 +698,8 @@ employ in order to be robust.
 
 \subsection{LLM Factors}
 \label{subsec:method-llm-variability}
+
+\subsubsection{Choice of LLM}
 % Choice of LLM
 We conduct experiments using four LLMs: OpenAI's GPT-4o
 \cite{openai2024HelloGpt4o}, OpenAI's o1-preview
@@ -711,12 +713,16 @@ of the selected models being reasoning LLMs (o1-preview and
 R1-Distil-Llama-8B).
 
 % Prompting strategy
+\subsubsection{Prompting approach}
 To investigate the effect of different prompting strategies, we perform
 experiments on all ontologies with zero-shot prompts and few-shot prompts. For
 few-shot prompts, we experiment with providing different numbers of examples
 ranging from 1 to 10. The provided examples are selected randomly from the
 concepts with the highest number of individuals, ensuring each example is
-taken from a different concept.  We experiment with four types of domain
+taken from a different concept.
+
+\subsubsection{Domain Context}
+We experiment with four types of domain
 contextualization: 1) \textbf{Generic}: The LLM is only asked to perform a
 generic task e.g. ranked retrieval.  2) \textbf{Ontology}: The LLM is defined
 as an expert in ontologies.  3) \textbf{Topic} of an ontology: The LLM is
@@ -729,6 +735,7 @@ topic.\footnote{Examples of the prompt templates can be found at our
 
 % Temperature variability and response consistency
 
+\subsection{Response variation}
 To evaluate response consistency over temperature variation, we repeat 3-shot,
 ontology contextualization experiments on the Wines and CASE ontologies with
 GPT-4o and Llama3-8B 10 times at three temperature values.
