--- a/main.tex
+++ b/main.tex
@@ -699,6 +699,9 @@ employ in order to be robust.
 \subsection{LLM Factors}
 \label{subsec:experiment-llm-factors}
 
+Our experimentation consists of a choice of several LLMs, with a modelling
+objective that expounds an LLM's ontological taxonomical insight
+
 \subsubsection{Modelling Objective:}
 
 \subsubsection{Choice of LLM:}
