--- a/main.tex
+++ b/main.tex
@@ -700,7 +700,7 @@ employ in order to be robust.
 \label{subsec:experiment-llm-factors}
 
 Our experimentation consists of a choice of several LLMs, with a modelling
-objective that expounds an LLM's ontological taxonomical insight
+objective that expounds an LLM's ontological taxonomical understanding
 
 \subsubsection{Modelling Objective:}
 
