--- a/main.tex
+++ b/main.tex
@@ -658,6 +658,8 @@ perform ontology population.
   \end{tabular}
 \end{table}
 
+\subsubsection{Taxonomy:}
+
 \subsubsection{Entity Labels:}
 % Embedding Similarity
 The domain differences between the three ontologies introduce entity labelling
