--- a/main.tex
+++ b/main.tex
@@ -658,7 +658,12 @@ perform ontology population.
   \end{tabular}
 \end{table}
 
-\subsubsection{Taxonomy:}
+\subsubsection{Taxonomy:} An understanding of the taxonomy of an ontology
+indicates a strong level of ontological awareness. While ontology population
+itself does not directly investigate ontology taxonomy, an investigation of
+the hierarchy awareness LLMs exhibit highlights whether an LLM's implicit
+understanding of entity relations is compliant with ontology hierarchies. To investigate this, our
+designed modelling objective for 
 
 \subsubsection{Entity Labels:}
 % Embedding Similarity
