--- a/main.tex
+++ b/main.tex
@@ -661,7 +661,7 @@ perform ontology population.
 \subsubsection{Taxonomy:} An understanding of the taxonomy of an ontology
 indicates a strong level of ontological awareness. While ontology population
 itself does not directly investigate ontology taxonomy, an investigation of
-the hierarchy awareness LLMs exhibit highlights whether an LLM's implicit
+the hierarchy awareness LLMs exhibit highlights whether their implicit
 understanding of entity relations is compliant with ontology hierarchies. To investigate this, our
 designed modelling objective for 
 
