--- a/main.tex
+++ b/main.tex
@@ -660,9 +660,10 @@ perform ontology population.
 
 \subsubsection{Taxonomy:} An understanding of the taxonomy of an ontology
 indicates a strong level of ontological awareness. While ontology population
-itself does not directly investigate ontology taxonomy, an investigation of
-the hierarchy awareness LLMs exhibit highlights whether their implicit
-understanding of entity relations is compliant with ontology hierarchies. To investigate this, our
+itself does not directly investigate ontology taxonomy, incorporating
+taxonomical investigation in the ontology population task provides insight if
+LLMs perform ontology population with an entity relation approach that matches
+ontology hierarchies. To investigate this, our
 designed modelling objective for 
 
 \subsubsection{Entity Labels:}
