--- a/main.tex
+++ b/main.tex
@@ -663,7 +663,9 @@ indicates a strong level of ontological awareness. While ontology population
 itself does not directly investigate ontology taxonomy, incorporating
 taxonomical investigation in the ontology population task provides insight if
 LLMs perform ontology population with an entity relation approach that matches
-ontology hierarchies. To investigate this, our
+ontology hierarchies. An ability to identify directly-asserted concepts for
+individuals but a failure to identify taxonomies highlights poor understanding
+of ontology taxonomies. To investigate this, our
 designed modelling objective for 
 
 \subsubsection{Entity Labels:}
