--- a/main.tex
+++ b/main.tex
@@ -665,8 +665,8 @@ taxonomical investigation in the ontology population task provides insight if
 LLMs perform ontology population with an entity relation approach that matches
 ontology hierarchies. An ability to identify directly-asserted concepts for
 individuals but a failure to identify taxonomies highlights poor understanding
-of ontology taxonomies. To investigate this, our
-designed modelling objective for 
+of ontology taxonomies and therefore, poor ontological `awareness'. To
+investigate this, our designed modelling objective for
 
 \subsubsection{Entity Labels:}
 % Embedding Similarity
