--- a/main.tex
+++ b/main.tex
@@ -666,7 +666,10 @@ LLMs perform ontology population with an entity relation approach that matches
 ontology hierarchies. An ability to identify directly-asserted concepts for
 individuals but a failure to identify taxonomies highlights poor understanding
 of ontology taxonomies and therefore, poor ontological `awareness'. To
-investigate this, our designed modelling objective for
+investigate this, our designed modelling objective for ontology population
+(Section \ref{subsec:experiment-llm-factors}) requires LLMs to identify not
+just directly-asserted concepts but hierarchies as well for more robust
+investigation.
 
 \subsubsection{Entity Labels:}
 % Embedding Similarity
