--- a/main.tex
+++ b/main.tex
@@ -708,12 +708,15 @@ formulation of the modelling objective (Section
 indicator of the semantics-based ontology population that LLMs are required to
 employ in order to be robust.
 
-
 \subsection{LLM Factors}
 \label{subsec:experiment-llm-factors}
 
-Our experimentation consists of a choice of several LLMs, with a modelling
-objective that expounds an LLM's ontological taxonomical understanding
+Our experimentation consists of a choice of several LLMs, with  and
+
+Our experimentation involves several LLMs, a modelling
+objective that expounds an LLM's ontological taxonomical understanding,
+multiple prompting approaches, domain contexts and an investigation of
+response consistency over temperature variation.
 
 \subsubsection{Modelling Objective:}
 
