--- a/main.tex
+++ b/main.tex
@@ -718,6 +718,19 @@ response consistency over temperature variation.
 
 \subsubsection{Modelling Objective:}
 
+Following a similar investigation of term typing in
+\citet{babaei2025Llms4omMatchingOntologies}, we model the task of ontology
+population as a retrieval problem and prompt several LLMs with a modified task
+of generating a ranked list of concepts of length up to the depth
+\cite{gangemi2005OntologyEvaluationValidation} of the ontology.  We provide
+minimal context about the ontology from which individuals and concepts are
+taken to force the LLMs to utilize their own knowledge. This choice highlights
+the relevance and utility of an LLM's "world knowledge" for a basic ontology
+learning task.
+% Modeled as a retrieval task with a retrieval length greater than one provides insight into the LLM's ability to accurately identify and infer concept hierarchies on its own when provided with just the concept labels.
+Requiring an LLM to retrieve concepts up to the depth of the ontology provides insight into their ability to infer concept hierarchies when only provided with concept labels.
+\chadded[id=UB, comment={\textbf{mAP@D}: Quick reference to the added portion about $\text{mAP@1}$ vs. $\text{mAP@D}$ in Section \ref{sec:results}}]{In addition, as discussed in more detail in Sections \ref{subsec:method-ontology-variability} and \ref{sec:results}, the nature of individual labels across ontologies leads us to believe that evaluating the ability of LLMs on ontology population using only directly-asserted concepts may provide inflated performance indicators due to lexical matching of entity labels.}
+
 \subsubsection{Choice of LLM:}
 % Choice of LLM
 We conduct experiments using four LLMs: OpenAI's GPT-4o
