--- a/main.tex
+++ b/main.tex
@@ -728,7 +728,8 @@ taken to force the LLMs to utilize their own knowledge. This choice highlights
 the relevance and utility of an LLM's "world knowledge" for a basic ontology
 learning task.  Requiring an LLM to retrieve concepts up to the depth of the
 ontology provides insight into their ability to infer concept hierarchies when
-only provided with concept labels.
+only provided with concept labels. It illustrates better ontological
+understanding.
 
 In addition, as discussed in more detail
 in Sections \ref{subsec:method-ontology-variability} and \ref{sec:results},
